@@ -28,11 +28,3 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
-tasks.withType(JavaCompile).each {
-	it.options.compilerArgs.add('--enable-preview')
-}
-
-test {
-	jvmArgs(['--enable-preview'])
-}
